--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,9 +9,13 @@
         <url-pattern>/sale</url-pattern>
         <url-pattern>/dashboard</url-pattern>
         <url-pattern>/forgetpassword</url-pattern>
+        <url-pattern>/productmanager</url-pattern>
+        <url-pattern>/customermanager</url-pattern>
+        <url-pattern>/ordermanager</url-pattern>
+        <url-pattern>/inventory</url-pattern>
         <url-pattern>/addstaff</url-pattern>
         <url-pattern>/staffmanager</url-pattern>
-        <url-pattern>/authentication</url-pattern> 
+        <url-pattern>/authentication</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>Login</servlet-name>
@@ -49,6 +53,26 @@
         <servlet-name>AddStaff</servlet-name>
         <servlet-class>Controller.Admin.AddStaff</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Product</servlet-name>
+        <servlet-class>Controller.Admin.Product</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddProduct</servlet-name>
+        <servlet-class>Controller.Admin.AddProduct</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Customer</servlet-name>
+        <servlet-class>Controller.Admin.Customer</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Inventory</servlet-name>
+        <servlet-class>Controller.Admin.Inventory</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Order</servlet-name>
+        <servlet-class>Controller.Admin.Order</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -84,6 +108,26 @@
     <servlet-mapping>
         <servlet-name>AddStaff</servlet-name>
         <url-pattern>/addstaff</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Product</servlet-name>
+        <url-pattern>/productmanager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddProduct</servlet-name>
+        <url-pattern>/addproduct</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Customer</servlet-name>
+        <url-pattern>/customermanager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Inventory</servlet-name>
+        <url-pattern>/inventory</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Order</servlet-name>
+        <url-pattern>/ordermanager</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>login</welcome-file>
