--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,9 @@
         <url-pattern>/addstaff</url-pattern>
         <url-pattern>/staffmanager</url-pattern>
         <url-pattern>/authentication</url-pattern>
+        <url-pattern>/supplier</url-pattern>
+        <url-pattern>/addsupplier</url-pattern>
+        <url-pattern>/editsupplier</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>Login</servlet-name>
@@ -73,6 +76,22 @@
         <servlet-name>Order</servlet-name>
         <servlet-class>Controller.Admin.Order</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Supplier</servlet-name>
+        <servlet-class>Controller.Admin.Supplier</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddSupplier</servlet-name>
+        <servlet-class>Controller.Admin.AddSupplier</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditSupplier</servlet-name>
+        <servlet-class>Controller.Admin.EditSupplier</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteSupplier</servlet-name>
+        <servlet-class>Controller.Admin.DeleteSupplier</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -99,7 +118,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Logout</servlet-name>
-        <url-pattern>/Logout</url-pattern>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Staff</servlet-name>
@@ -128,6 +147,22 @@
     <servlet-mapping>
         <servlet-name>Order</servlet-name>
         <url-pattern>/ordermanager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Supplier</servlet-name>
+        <url-pattern>/supplier</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddSupplier</servlet-name>
+        <url-pattern>/addsupplier</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditSupplier</servlet-name>
+        <url-pattern>/editsupplier</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteSupplier</servlet-name>
+        <url-pattern>/deletesupplier</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>login</welcome-file>
