--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,18 +16,17 @@
         <url-pattern>/addstaff</url-pattern>
         <url-pattern>/staffmanager</url-pattern>
         <url-pattern>/authentication</url-pattern>
+        <url-pattern>/supplier</url-pattern>
+        <url-pattern>/addsupplier</url-pattern>
+        <url-pattern>/suppliermanager</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>Login</servlet-name>
         <servlet-class>Controller.Login</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>Schedule</servlet-name>
-        <servlet-class>Controller.Admin.Schedule</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>SystemLog</servlet-name>
-        <servlet-class>Controller.Admin.SystemLog</servlet-class>
+        <servlet-name>AddNewSessionTime</servlet-name>
+        <servlet-class>Controller.Admin.AddNewSessionTime</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>HomeSale</servlet-name>
@@ -81,6 +80,30 @@
         <servlet-name>Order</servlet-name>
         <servlet-class>Controller.Admin.Order</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Supplier</servlet-name>
+        <servlet-class>Controller.Admin.Supplier</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddSupplier</servlet-name>
+        <servlet-class>Controller.Admin.AddSupplier</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SupplierManager</servlet-name>
+        <servlet-class>Controller.Admin.SupplierManager</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SystemLog</servlet-name>
+        <servlet-class>Controller.Admin.SystemLog</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Schedule</servlet-name>
+        <servlet-class>Controller.Admin.Schedule</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SetWorkSession</servlet-name>
+        <servlet-class>Controller.Admin.SetWorkSession</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -107,7 +130,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Logout</servlet-name>
-        <url-pattern>/Logout</url-pattern>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Staff</servlet-name>
@@ -138,12 +161,32 @@
         <url-pattern>/ordermanager</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>Schedule</servlet-name>
-        <url-pattern>/schedule</url-pattern>
+        <servlet-name>AddNewSessionTime</servlet-name>
+        <url-pattern>/addsessiontime</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Supplier</servlet-name>
+        <url-pattern>/supplier</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddSupplier</servlet-name>
+        <url-pattern>/addsupplier</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SupplierManager</servlet-name>
+        <url-pattern>/suppliermanager</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SystemLog</servlet-name>
         <url-pattern>/log</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Schedule</servlet-name>
+        <url-pattern>/schedule</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SetWorkSession</servlet-name>
+        <url-pattern>/setworksession</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>login</welcome-file>
