--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar=web\\lib\\activation-1.1.jar
+file.reference.gson-2.11.0.jar=web\\lib\\gson-2.11.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail-1.6.0.jar=web\\lib\\javax.mail-1.6.0.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javax.mail-1.6.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.gson-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
