--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -73,6 +73,14 @@
         <servlet-name>Order</servlet-name>
         <servlet-class>Controller.Admin.Order</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Supplier</servlet-name>
+        <servlet-class>Controller.Admin.Supplier</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SaleController</servlet-name>
+        <servlet-class>Controller.SaleController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -128,6 +136,14 @@
     <servlet-mapping>
         <servlet-name>Order</servlet-name>
         <url-pattern>/ordermanager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Supplier</servlet-name>
+        <url-pattern>/supplier</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SaleController</servlet-name>
+        <url-pattern>/salecontroller</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>login</welcome-file>
